Basic project structure created

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Калькулятор на JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "serve": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/ivan-dyadyura/calculator/issues"
   },
-  "homepage": "https://github.com/ivan-dyadyura/calculator#readme"
+  "homepage": "https://github.com/ivan-dyadyura/calculator#readme",
+  "devDependencies": {
+    "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
